--- a/pom.xml
+++ b/pom.xml
@@ -5,18 +5,18 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.3.RELEASE</version>
+        <version>3.3.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.dais39</groupId>
+    <groupId>com.daisuzz</groupId>
     <artifactId>architecture-sample</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>architecture-sample</name>
-    <description>architecutre sample</description>
+    <description>architecture sample</description>
 
     <properties>
-        <java.version>1.8</java.version>
-        <kotlin.version>1.3.21</kotlin.version>
+        <java.version>21</java.version>
+        <kotlin.version>1.9.25</kotlin.version>
     </properties>
 
     <dependencies>
@@ -30,7 +30,7 @@
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <artifactId>kotlin-stdlib</artifactId>
         </dependency>
 
         <dependency>
